## Process this file with automake to produce Makefile.in

EXTRA_DIST = rcunit.doxy

info_TEXINFOS = rcunit.texi
rcunit_TEXINFOS = version.texi \
            fdl.txt \
            rcunit_sample_app_functions.c \
            rcunit_sample_app_test_functions.c \
            rcunit_sample_app_1.c \
            rcunit_sample_app_2.c \
            rcunit_sample_app_3.c \
            rcunit_sample_app_4.c \
            rcunit_sample_app_5.c \
            rcunit_sample_app_6.c \
            rcunit_sample_app_7.c

