## Process this file with automake to produce Makefile.in

noinst_PROGRAMS = rcunit_sample_app_1 \
                  rcunit_sample_app_2 \
                  rcunit_sample_app_3 \
                  rcunit_sample_app_4 \
                  rcunit_sample_app_5 \
                  rcunit_sample_app_6 \
                  rcunit_sample_app_7 \
                  rcunit_sample_app_main

rcunit_sample_app_1_SOURCES = rcunit_sample_app_1.c rcunit_sample_app_functions.c rcunit_sample_app_test_functions.c
rcunit_sample_app_2_SOURCES = rcunit_sample_app_2.c rcunit_sample_app_functions.c rcunit_sample_app_test_functions.c
rcunit_sample_app_3_SOURCES = rcunit_sample_app_3.c rcunit_sample_app_functions.c rcunit_sample_app_test_functions.c
rcunit_sample_app_4_SOURCES = rcunit_sample_app_4.c rcunit_sample_app_functions.c rcunit_sample_app_test_functions.c
rcunit_sample_app_5_SOURCES = rcunit_sample_app_5.c rcunit_sample_app_functions.c rcunit_sample_app_test_functions.c
rcunit_sample_app_6_SOURCES = rcunit_sample_app_6.c rcunit_sample_app_functions.c rcunit_sample_app_test_functions.c
rcunit_sample_app_7_SOURCES = rcunit_sample_app_7.c rcunit_sample_app_functions.c rcunit_sample_app_test_functions.c
rcunit_sample_app_main_SOURCES = rcunit_sample_app_main.c

noinst_HEADERS = rcunit_sample_app_externs.h

LDADD = ../src/librcunit.a

DEPENDENCIES =

AM_CPPFLAGS =  -I $(top_srcdir)/src  -I $(srcdir)
